--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,11 @@
 
   --tertiary_ColorShade_1: #f9e0c8;
 
-  --primary_box_shadow: 0px 0px 8px -1px;
+  --primary_box_shadow: 0px 0px 8px -4px;
 
-  --box_shadow_Bottom: 0 3px 5px -2px;
+  --box_shadow_Bottom: 0 3px 8px -5px;
+
+  --text-color-primary: #898989;
 }
 
 /* 
@@ -75,10 +77,11 @@ a {
 
 .HomePage_header h1 {
   text-align: center;
-  margin: 0.5rem;
+  margin: 1rem;
 }
 .HomePage_header {
-  border-bottom: 2px solid #ededed;
+  border-bottom: 2px solid var(--tertiary_ColorShade_1);
+  box-shadow: var(--box_shadow_Bottom);
   margin-bottom: 0.5rem;
 }
 #PersonalCategory,
@@ -180,6 +183,36 @@ a {
   box-shadow: 0 0 15px black;
 }
 
+.footer_Area {
+  padding: 1rem 1rem 1rem 1rem;
+  background-color: var(--primary_BlueShade_1);
+  color: white;
+}
+
+.footer_Area div nav ul {
+  list-style: none;
+}
+.footer_Area div nav ul li {
+  margin-bottom: 1rem;
+}
+
+.footer_Area div nav ul li a {
+  color: white;
+}
+.dk_footer {
+  display: none;
+}
+
+.mb_footer {
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+
+.mb_footer p {
+  margin: 0;
+}
+
 @media screen and (min-width: 600px) {
   .img_info_container img {
     width: 100%;
@@ -205,27 +238,16 @@ a {
     margin-top: 0;
     padding: 1rem;
   }
-}
+  .mb_footer {
+    display: none;
+  }
 
-.footer_Area {
-  display: flex;
-  padding: 1rem 1rem 0 1rem;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  background-color: var(--primary_BlueShade_1);
-  color: white;
-}
-
-.footer_Area div nav ul {
-  list-style: none;
-}
-.footer_Area div nav ul li {
-  margin-bottom: 1rem;
-}
-
-.footer_Area div nav ul li a {
-  color: white;
+  .dk_footer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 /*#endregion HomePage*/
@@ -244,20 +266,18 @@ a {
   padding: 1rem 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-box-shadow: 0 4px 2px -2px gray;
-  box-shadow: 0 4px 2px -2px gray;
-  border-bottom: 2px solid lightgray;
+  border-bottom: 1px solid #b6babb;
 }
 
 .mb-menu li a {
   text-decoration: none;
-  color: white;
+  color: var(--primary_BlueShade_1);
 }
 
 .mb-menu {
-  background-color: rgba(47, 47, 47, 0.9);
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
+  background-color: var(--secondary_PinkShade_2);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   display: grid;
   position: absolute;
   padding: 0;
@@ -377,9 +397,16 @@ a {
 
 .Menu_BellIconContainer a {
   margin: 0 0.5rem;
-  color: black;
-  border: 2px solid black;
-  padding: 0.5rem 1rem;
+  color: var(--primary_BlueShade_1);
+  padding: 0.5rem 0.5rem;
+}
+
+#ShowMenu {
+  color: white;
+  border: 1px solid var(--primary_BlueShade_1);
+  background-color: var(--primary_BlueShade_1);
+  padding: 0.2rem;
+  border-radius: 2px;
 }
 
 .dk-menu {
@@ -413,7 +440,7 @@ a {
   flex-direction: column;
 }
 .subProfileMenu ul li {
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid var(--primary_BlueShade_1);
 }
 
 @media screen and (min-width: 600px) {
@@ -440,7 +467,7 @@ a {
     display: none;
   }
   .NotificationPopUpContainer {
-    right: 380px;
+    right: 460px;
     z-index: -1;
   }
   .dk-menu {
@@ -457,14 +484,22 @@ a {
 
   .dk-menu ul li {
     margin-left: 1rem;
+    margin-right: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
+  .dk-menu ul li a {
+    color: var(--primary_BlueShade_1);
+    font-size: 1.2rem;
+  }
+
   .subProfileMenu ul li {
     margin-left: 0;
+    margin-right: 0;
     text-align: center;
-    padding: 0 1rem;
+    padding: 0 1rem 1rem 1rem;
     margin-bottom: 0.5rem;
   }
   .triangle {
@@ -1173,3 +1208,255 @@ a {
 }
 
 /* #endregion Search */
+
+/* ************************************************************************************ */
+/* ************************************************************************************ */
+
+/* #region CreateListing */
+.ListingSite-main {
+  padding: 1rem;
+}
+form .form-class {
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 1rem;
+  margin-top: 1rem;
+  background-color: var(--secondary_PinkShade_2);
+  line-height: 1.5;
+  font-size: 1.5rem;
+  box-shadow: var(--primary_box_shadow);
+}
+.form-class #category {
+  border-radius: 5px;
+  padding: 0.5rem;
+  width: 50%;
+  outline: none;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  color: var(--text-color-primary);
+  border: 1px solid var(--primary_BlueShade_1);
+}
+
+.create-user-form .heading h1 {
+  color: var(--primary_BlueShade_1);
+}
+.requiredSymbol {
+  color: red;
+  margin-left: 0.5rem;
+}
+
+.create-user-form label {
+  padding: 0.5rem 0;
+}
+.create-user-form input {
+  height: 2rem;
+  border: 0;
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  color: var(--text-color-primary);
+  outline: none;
+  border-bottom: 1px solid var(--primary_BlueShade_1);
+  background-color: transparent;
+}
+.create-user-form textarea {
+  height: 3rem;
+  border: none;
+  margin-bottom: 0.5rem;
+  outline: none;
+  background-color: transparent;
+  font-size: 1rem;
+  color: var(--text-color-primary);
+  border-bottom: 1px solid var(--primary_BlueShade_1);
+}
+.button-div input[type="file"] {
+  color: rgba(0, 0, 0, 0);
+  border: none;
+  width: 100%;
+}
+.img-payment {
+  display: grid;
+}
+.img-payment img {
+  width: 100%;
+  border-radius: 5px;
+}
+.img-payment .img-info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 1rem 2%;
+  gap: 2rem;
+}
+.img-payment .img-clicked-info {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem;
+}
+.img-payment .img-title {
+  font-weight: bold;
+}
+.img-payment .button-div {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 1rem;
+}
+.img-payment .payment {
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 1rem;
+  line-height: 1.5;
+  font-size: 1.5rem;
+  box-shadow: var(--primary_box_shadow);
+  background-color: var(--secondary_PinkShade_2);
+}
+.payment .checkbox-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: row wrap;
+}
+
+.label_checkbox_wrapper {
+  display: flex;
+  align-items: center;
+}
+.paymentOptionLabel {
+  font-size: 1rem;
+}
+
+.address-class p {
+  margin: 0;
+}
+
+.paymentOptioninput {
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.create-user-form .form1-class {
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 1rem;
+  margin-top: 2rem;
+  background-color: var(--secondary_PinkShade_2);
+  line-height: 1.5;
+  font-size: 1.5rem;
+  box-shadow: var(--primary_box_shadow);
+}
+.form1-class .half-form {
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 1rem 2%;
+}
+.half-form .area {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  line-height: 1.5;
+}
+.area .area-city,
+.area-province {
+  display: grid;
+}
+.ListingSite-main .postal {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.postal input {
+  width: 70%;
+}
+.button {
+  display: flex;
+  justify-content: center;
+}
+.form1-class span,
+.payment label span,
+form label span {
+  color: rgb(248, 94, 94);
+}
+#create-btn {
+  font-size: 22;
+  border-radius: 5px;
+  border: 0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 1rem 2rem;
+  color: white;
+  background-color: var(--primary_BlueShade_1);
+}
+.ListingSite-main .iframe {
+  display: none;
+}
+.ListingSite-main footer {
+  display: none;
+}
+
+.postal {
+  margin-top: 1rem;
+}
+
+.MapsContainer {
+  margin-top: 2rem;
+}
+
+@media screen and (min-width: 1000px) {
+  .create-user-form {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .ListingSite-main .heading {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .ListingSite-main .section-one {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
+  }
+  .ListingSite-main .section-two {
+    display: grid;
+    grid-template-columns: 48% 1fr;
+    gap: 2rem;
+  }
+  .create-user-form .form1-class {
+    display: flex;
+    flex-flow: column nowrap;
+    padding: 1rem;
+  }
+  .ListingSite-main .half-form {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1.5rem;
+    margin: 1rem 0;
+    justify-content: space-between;
+  }
+  .ListingSite-main .area {
+    align-items: flex-end;
+  }
+  .ListingSite-main .postal {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: flex-end;
+  }
+
+  .payment .checkbox-buttons {
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(3, max-content);
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .payment .checkbox-buttons .label_checkbox_wrapper {
+    justify-content: center;
+  }
+}
+
+/* #endregion CreateListing */
