--- a/css/styles.css
+++ b/css/styles.css
@@ -981,6 +981,7 @@ a {
   border: none;
   border-bottom: 1px solid var(--primary_BlueShade_3);
   outline: none;
+  width: 100%;
 }
 
 /* Style the icons*/
@@ -1086,10 +1087,10 @@ a {
   }
 
   .login-wrapper {
-    max-width: 100%;
-    width: 100%;
-    margin-left: 3rem;
-    margin-right: 3rem;
+    max-width: 1200px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 /*#endregion Login*/
