--- a/css/styles.css
+++ b/css/styles.css
@@ -1357,14 +1357,52 @@ a {
 /* ************************************************************************************ */
 
 /* #region SignUP */
-.SignUp-parent {
+.signup-parent {
   height: 100vh;
-  background: url("https://picsum.photos/1200/500?random=11");
+  background: url(https://picsum.photos/1200/500?random=11);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.signup-wrapper h1 {
+  margin-bottom: 3rem;
+  text-align: center;
+  padding-top: 1rem;
+}
+.First_Name, .login-password, .login-wrapper h1 {
+  text-align: center;
+}
+.signup-wrapper input {
+  border: none;
+  border-bottom: 1px solid var(--primary_BlueShade_3);
+  outline: none;
+  width: 100%;
+}
+.First_Name,.Email,.Password,.Confirm_Password,.Phone_Number,.Address{
+margin-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;}
+@media screen and (max-width: 1200px) {
+   .signup-desktop 
+   { display: none; 
+  } 
+  }
+   .signup-wrapper { 
+     max-width: fit-content; 
+    margin-left: auto; margin-right: auto; 
+    border-radius: 1.5rem;
+     background-color: white; 
+  box-shadow: var(--primary_box_shadow); }
+
+
+#SignupBtn {
+  background-color: var(--primary_BlueShade_1);
+  color: white;
+  border: 1px solid var(--primary_BlueShade_1);
+  border-radius: 5px;
+  padding: 0.25rem 2rem;
 }
 
 .icon_input_wrapper {
@@ -1373,6 +1411,41 @@ a {
 
 .icon_input_wrapper input {
   padding-left: 2%;
+}
+#SignUpBtn,#LoginBtn{
+  background-color: var(--primary_BlueShade_1);
+    color: white;
+    border: 1px solid var(--primary_BlueShade_1);
+    border-radius: 5px;
+    padding: 0.25rem 2rem;
+}
+
+@media screen and (min-width: 1200px) {
+  .signup-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .signup-desktop {
+    place-self: center;
+    text-align: center;
+  }
+
+  .signup-desktop img {
+    padding: 4rem 2rem;
+  }
+
+  .signup-parent {
+    background-image: none;
+    background-color: var(--primary_BlueShade_1);
+  }
+
+  .signup-wrapper {
+    max-width: 1200px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /* Style and horizontally align the wrapper div */
@@ -1383,7 +1456,6 @@ a {
   padding: 1rem;
   box-shadow: 3px 3px 4px gray, -3px -3px 4px lightgray;
 }
-
 .SignUp-wrapper h1 {
   text-align: center;
 }
@@ -1446,6 +1518,8 @@ a {
 .errorContainr.active {
   display: block;
 }
+
+
 /* #endregion SignUP */
 
 /* ************************************************************************************ */
