View listing from the homepage page and some css tweaks

--- a/css/styles.css
+++ b/css/styles.css
@@ -1610,9 +1610,8 @@ a {
 /* ************************************************************************************ */
 
 /* #region Listing Page */
-.Category_Listing_Container h2 {
+.main-parent-title h2{
   text-align: center;
-  grid-column: 1/-1;
 }
 
 .Category_Listing_Container {
