Some CSS TWEAKS in listing page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1616,7 +1616,6 @@ a {
 
 .Category_Listing_Container {
   display: grid;
-  max-width: 1000px;
   margin: 0 auto;
   grid-template-columns: 1fr;
 }
@@ -1660,7 +1659,7 @@ a {
 
 @media screen and (min-width: 600px) {
   .Category_Listing_Container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -2282,3 +2281,6 @@ form label span {
 }
 
 /* #endregion CreateListing */
+
+/* ************************************************************************************ */
+/* ************************************************************************************ */
